[package]
name = "stocknewstui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
toml = "0.8"
feed-rs = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
open = "5"
scraper = "0.22"
